system: Fix change system time dialog alignment issues
Also fix the inline validation for manual system time settings.
Previously errors for date and time where shown for the opposite field.

--- a/pkg/systemd/overview-cards/configurationCard.less
+++ b/pkg/systemd/overview-cards/configurationCard.less
@@ -6,3 +6,14 @@
     font: inherit;
     margin-left: 0.5em;
 }
+
+#systime-date-input {
+    display: inline;
+    width: 10em;
+}
+
+#systime-time-hours,
+#systime-time-minutes {
+    display: inline;
+    width: 3em;
+}
